--- a/S08/index.html
+++ b/S08/index.html
@@ -3,22 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar System</title>
+    <title>Interactive Solar System</title>
     <link rel="stylesheet" href="main.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <canvas id="solar-system"></canvas>
-    <button id="toggle-camera">Free Camera</button>
-    <div id="free-camera-info" class="hidden">
-        <p><strong>Free Camera Mode</strong></p>
-        <p>W/A/S/D - Move | Q/E - Up/Down | Mouse - Look</p>
+    
+    <!-- UPDATED: Added a "hidden" class so the UI starts off invisible -->
+    <div class="ui-container hidden">
+        <div class="top-controls">
+            <div id="free-camera-info" class="info-box hidden">
+                <p><strong>Free Camera Mode</strong></p>
+                <p><strong>W/S:</strong> Forward/Backward</p>
+                <p><strong>A/D:</strong> Strafe Left/Right</p>
+                <p><strong>Q/E:</strong> Down/Up</p>
+            </div>
+            <button id="toggle-camera" class="control-btn">Free Camera</button>
+        </div>
+
+        <div class="bottom-controls">
+             <div class="control-group">
+                <p class="group-label">Simulation Speed</p>
+                <button class="speed-btn" data-speed="0.25">0.25x</button>
+                <button class="speed-btn" data-speed="0.5">0.5x</button>
+                <button class="speed-btn active" data-speed="1.0">1x</button>
+                <button class="speed-btn" data-speed="2.0">2x</button>
+                <button class="speed-btn" data-speed="4.0">4x</button>
+            </div>
+            <div class="control-group">
+                <p class="group-label">Toggle Visibility</p>
+                <button class="toggle-btn active" data-target="planets">Planets</button>
+                <button class="toggle-btn" data-target="moons">Moons</button>
+                <button class="toggle-btn" data-target="orbits">Orbits</button>
+                <button class="toggle-btn" data-target="asteroids">Asteroids</button>
+                <button class="toggle-btn" data-target="stars">Stars</button>
+            </div>
+        </div>
     </div>
+    
     <script type="importmap">
         {
             "imports": {
                 "three": "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js",
                 "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/",
-                "gsap": "https://unpkg.com/gsap@3.12.5/index.js"
+                "gsap": "https://unpkg.com/gsap@3.12.4/index.js"
             }
         }
     </script>
